--- a/netlify.toml
+++ b/netlify.toml
@@ -11,3 +11,9 @@
     from = "/api/*"
     to = "/.netlify/functions/:splat"
     status = 200
+
+[[headers]]
+    for = "/*"
+    [headers.values]
+    X-Frame-Options = "DENY"
+    Referrer-Policy = "strict-origin-when-cross-origin"
